polybot-k8s/prod/Polybot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot
  labels:
    app: polybot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
        - name: polybot

          image: merryshalabi/polybot-prod:12
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: service-polybot-prod
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: service-polybot-external-prod
spec:
  type: NodePort
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
